<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimens15"
    android:background="@drawable/shape_desc_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens20"
        android:text="@string/tv_author"
        android:textColor="@android:color/holo_green_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens10"
        android:text="@string/tv_period"
        android:textColor="@android:color/holo_green_dark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens10"
        android:text="@string/tv_email"
        android:textColor="@android:color/holo_green_dark"/>

</LinearLayout>